--- a/webroot/less/bootstrap-custom.less
+++ b/webroot/less/bootstrap-custom.less
@@ -51,7 +51,7 @@
 //@import "bootstrap/popovers.less";
 
 // Components: Misc
-//@import "bootstrap/thumbnails.less";
+@import "bootstrap/thumbnails.less";
 //@import "bootstrap/media.less";
 //@import "bootstrap/labels-badges.less";
 //@import "bootstrap/progress-bars.less";
