--- a/webroot/less/overrides.less
+++ b/webroot/less/overrides.less
@@ -53,3 +53,14 @@ legend + .control-group {
 .form-horizontal .form-actions {
 	padding-bottom: 0;
 }
+
+.radio,
+.checkbox {
+   padding-left: 0;
+}
+
+.radio input[type="radio"],
+.checkbox input[type="checkbox"] {
+   float: none;
+   margin-left: 0;
+}
